# decim

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/managers/: commands_manager.rs  game_manager.rs  mod.rs
src/utils/: file_runner.rs  game.rs  mod.rs
