[package]
name = "decim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io="0.1.12"
ctrlc="3.4.1"
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"
lazy_static = "1.4.0"
binaryornot = "1.0.0"
clap = { version = "4.4.11", features = ["derive"] }
zip = "0.6.6"
chrono = "0.4.31"
tabled = "0.15.0"
